package com.serli.dojo.arena.dice;

public interface Match {

	boolean isFinished();

}